Learned CSS and Styling

--- a/css_and_html/index2.html
+++ b/css_and_html/index2.html
@@ -6,15 +6,15 @@
 </head>
 
 <body>
-    <div class="all">This is div one</div>
+    <div class="all one">This is div one</div>
     <div class="all">This is div two</div>
     <div class="all">This is <strong>div</strong> three</div>
     <div class="all">This is div four</div>
     <div class="all">This is div five</div>
     <div class="all">This is div six</div>
     <div class="all">This is div seven</div>
-    <span>This is span one</span>
-    <span>This is span two</span>
+    <span class="all">This is span one</span>
+    <span class="all">This is span two</span>
 </body>
 
 </html>
